fixes z-index issue on videos page

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -64,7 +64,8 @@ $app: (
 );
 
 $z-index: (
-  header: 1,
+	header: 10,
+	iframe: 5,
   project-backdrop: -1,
   button-animation: -1
 );
@@ -192,7 +193,7 @@ embed {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1;
+  z-index: map-get($z-index, iframe);
 }
 
 @media screen and (min-width: 350px) {
